# OrbitEngine-Editor-Qt

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
Code/: main.cpp
Code/UI/: Editor.cpp  Editor.hpp  Editor.ui  EditorInteraction.cpp  EditorInteraction.hpp  EditorLooper.cpp  EditorLooper.hpp  Icons.cpp  Icons.hpp  ProjectSelector.cpp  ProjectSelector.hpp  ProjectSelector.ui  QNumeric.cpp  QNumeric.hpp  QOEComponentInspector.cpp  QOEComponentInspector.hpp  QOEComponentInspector.ui  QOEPropertiesModel.cpp  QOEPropertiesModel.hpp  QOEPropertiesTreeView.cpp  QOEPropertiesTreeView.hpp  QOEProperty.cpp  QOEProperty.hpp  QOEPropertyItemDelegate.cpp  QOEPropertyItemDelegate.hpp  QOESceneHierarchyModel.cpp  QOESceneHierarchyModel.hpp  QOEWidget.cpp  QOEWidget.hpp  SceneView.cpp  SceneView.hpp
Resources/: resources.qrc
Resources/stylesheets/: global.qss  global_other.qss  variables.vars
